# parallax

./: .dockerignore  .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  CLAUDE.md  GETTING_STARTED.md  LICENSE-ENTERPRISE  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_TEST_RESULTS.md  PRODUCTION_TEST_STATUS.md  README.md  ROADMAP.md  SDK_TEST_SUMMARY.md  TESTING_GUIDE.md  TESTING_QUICKSTART.md  biome.json  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  eslint.config.js  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-etcd-direct.sh  start-local-no-docker.sh  start-local.sh  start-production-test.sh  start-quick.sh  test-all-sdks.sh  test-debug.sh  test-production-system-simple.sh  test-sdks-standardized.sh  test-setup.sh  tsconfig.json  turbo.json  update-prism-packages.js
apps/demo-python/: demo_agent.py  pyproject.toml  standardized_test.py
apps/demo-rust/: Cargo.toml
apps/demo-rust/src/: grpc_demo.rs  main.rs  standardized_test.rs
demos/: DEMO_IDEAS.md
docker/: agent-python.Dockerfile  agent-typescript.Dockerfile  build.sh  control-plane.Dockerfile
docs/: AGENT_HOSTING_STRATEGY.md  AGENT_RUNTIME_IMPLEMENTATION.md  AGENT_RUNTIME_SUPPORT_DEVELOPMENT.md  ARCHITECTURE.md  AUTONOMOUS_COMPANY_GUIDE.md  AUTO_PATTERN_GENERATION.md  CODING_SWARM_DEMO_PLAN.md  CONFIDENCE.md  DOC_README.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  LICENSING_STRATEGY.md  META_ORCHESTRATION.md  OPEN_SOURCE_LAUNCH_STRATEGY.md  ORCHESTRATION_PATTERNS.md  PATTERN_GENERATION_ARCHITECTURE_GAP.md  README.md  (+21 more)
(+606 files in other folders)
