[tool.poetry]
name = "demo-python"
version = "0.1.0"
description = "Python SDK demo for Parallax"
authors = ["Parallax Team"]

[tool.poetry.dependencies]
python = "^3.9"
parallax = { path = "../../packages/sdk-python", develop = true }
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"