[package]
name = "demo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
parallax-sdk = { path = "../../packages/sdk-rust" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "demo"
path = "src/main.rs"

[[bin]]
name = "standardized_test"
path = "src/standardized_test.rs"

[[bin]]
name = "grpc_demo"
path = "src/grpc_demo.rs"